=================
Changes for Crate
=================

Unreleased
==========

 - Updated crash to version 0.14.0 which contains the following changes:

    - Fixed output tabular format bug which results in wrong representation
      of a string containing a floating point value.

    - Updated wording of the cluster check command output.

    - Added the check command which queries the ``sys.checks`` table for
      cluster checks

    - updated crate-python to 0.13.4

 - Fixed an issue that could kill long running queries on shards with few
   segments containing huge amounts of documents

 - Fixed an issue that could cause `COPY FROM` to ignore a primary key
   constraint leading to duplicate rows.
   This could happen if a table has multiple primary keys and clustered by is
   set to one primary key column other than the first primary key column.

 - Fixed an issue that could cause long running operations to get killed

 - Fixed an issue where the `orphan_partition` column in the `sys.shards` table
   could return a wrong result if the shard was part of a custom table.

 - Fixed an issue that caused stuck jobs to return an empty result instead of
   an error.

 - Added cluster checks which are exposed via the ``sys.checks`` table.

 - Exposed the cluster gateway settings

 - Added ``os_info`` column to ``sys.nodes`` table.
   Currently the column only lists the number of available processors in the JVM
   (which is usually equal to the number of cores of the CPU).

 - Upgraded Elasticsearch to 1.7.1
   This update changes the default value for delayed allocation of unassigned
   shards (see: `https://crate.io/docs/en/latest/configuration.html#unassigned`_).
   Also updated the upstream of EC2 discovery module

2015/08/13 0.51.1
=================

 - Improved retry logic of EC2 unicast host discovery mechanism

 - Updated crate-admin to 0.14.3 which includes the following changes:

   - fixed line wrapping in console result table
